@@ -18,8 +18,8 @@
   bracketed_link = ( '["' link_says '":' %A uri %{ STORE("href"); } :> "]" ) >X ;
 
   # images
-  image_src = ( uri ) >A %{ STORE("src"); } ;
-  image_is = ( A2 C ". "? image_src :> title? ) ;
+  image_title = ( '(' mtext ')' ) ;
+  image_is = ( A2 C ". "? (uri image_title?) >A %{ STORE("src"); } ) ;
   image_link = ( ":" uri >A %{ STORE_URL("href"); } ) ;
   image = ( "!" image_is "!" %A image_link? ) >X ;
   bracketed_image = ( "[!" image_is "!" %A image_link? "]" ) >X ;
@@ -95,8 +95,8 @@
 
   main := |*
     
-    image { INLINE(block, "image"); };
-    bracketed_image { INLINE(block, "image"); };
+    image { PARSE_IMAGE_ATTR("src"); INLINE(block, "image"); };
+    bracketed_image { PARSE_IMAGE_ATTR("src"); INLINE(block, "image"); };
     
     link { PARSE_LINK_ATTR("name"); PASS(block, "name", "link"); };
     bracketed_link { PARSE_LINK_ATTR("name"); PASS(block, "name", "link"); };
