@@ -1,5 +1,7 @@
 === Edge
 
+* Image URLs and image titles can now contain parentheses. #71
+
 * Handle caps properly in link titles. #77
 
 * Remove extra preformatted line breaks after extended block code. #79
